# livekitagent

./: .easignore  .gitignore
backend/: .env.example  agent.py  db.txt  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  rooms.py  sessions.py  users.py  webhooks.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: agent_manager.py  auth.py  database.py  livekit.py
frontend/: .easignore  .env.example  .gitignore  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/(auth)/: forget-password.tsx  login.tsx  reset-password.tsx  signup.tsx
frontend/app/(call)/: call.tsx
frontend/app/(onboarding)/: _layout.tsx  step1.tsx  step2.tsx  step3.tsx
frontend/app/(payment)/: payment.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx
frontend/app/profile/: edit.tsx
frontend/components/: AuthWrapper.tsx
frontend/contexts/: OnboardingContext.tsx
frontend/hooks/: useDeepLink.ts
frontend/lib/: supabase.ts
